# cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "candy"
version = "0.2.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
dashmap = { version = "6.1.0", features = ["serde"] }
http = "1.3.1"
hyper = { version = "1.8.1", features = ["full"] }
md5 = "0.8.0"
mimalloc = "0.1.48"
mime_guess = "2.0.5"
# lua
mlua = { version = "0.11.5", features = [
  "anyhow",
  "async",
  "lua54",
  "macros",
  "send",
  "serialize",
  "vendored",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
  "brotli",
  "charset",
  "deflate",
  "gzip",
  "http2",
  "rustls-tls",
  "stream",
  "system-proxy",
  # "native-tls-vendored",
  "zstd",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
# tools
thiserror = "2.0.17"
# core
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
# logging
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# tokio-rustls = "0.26.2"
# hyper-util = { version = "0.1.16", features = ["full"] }
# http-body-util = "0.1.3"
# futures-util = "0.3.31"
# bytes = "1.10.1"
# serde_json = "1.0.141"

[dev-dependencies]
tempfile = "3.23.0"

[profile.dev]
incremental = true  # Compile your binary in smaller steps.
# rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
opt-level = 3  # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true  # Ensures debug symbols are removed.
lto = true  # Enables link-time-optimizations.
panic = "abort"  # Higher performance by disabling panic handlers.
codegen-units = 1  # Allows LLVM to perform better optimization.
# trim-paths = "all" # Removes potentially privileged information from your binaries.
# rustflags = ["-Cdebuginfo=0", "-C", "target-cpu=native", "-Z", "threads=8"]
