[package]
name = "candy"
version = "0.2.5"
edition = "2024"

[features]
default = ["all"]
all = ["lua"]
lua = ["dep:mlua"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
const_format = "0.2.35"
dashmap = { version = "6.1.0", features = ["serde"] }
http = "1.4.0"
hyper = { version = "1.8.1", features = ["http1", "http2", "server", "client"] }
md5 = "0.8.0"
mimalloc = "0.1.48"
mime_guess = "2.0.5"
# lua
mlua = { version = "0.11.6", optional = true, features = [
    "anyhow",
    "async",
    "lua54",
    "macros",
    "send",
    "serialize",
    "vendored",
] }
notify = "8.2.0"
async-stream = "0.3.5"
futures = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "rustls",
    "stream",
    "system-proxy",
    "zstd",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
# tools
thiserror = "2.0.18"
# core
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tokio-util = "0.7.18"
toml = "0.9.12"
tower = { version = "0.5.3", features = ["util", "filter", "limit"] }
tower-http = { version = "0.6.8", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "trace",
] }
# logging
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.26.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "brotli",
    "charset",
    "deflate",
    "gzip",
    "http2",
    "rustls",
    "stream",
    "system-proxy",
    "zstd",
] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
codegen-units = 1 # Allows LLVM to perform better optimization.
